--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
 pageclass: home
-title: "Unreal Containers: run the Unreal Engine inside Docker containers"
-tagline: Welcome to the central hub for developers running the Unreal Engine inside Docker containers.
+title: "Unreal Containers: run the Unreal Engine inside containers"
+tagline: Welcome to the central hub for developers running the Unreal Engine inside containers.
 ---
